module-5-gitops/gitops/travel-control/templates/dr.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1
metadata:
  name: control
  namespace: travel-control
  labels:
    module: m5
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  host: control-vm.travel-control.svc.cluster.local
  subsets:
    - labels:
        version: v1
      name: v1
