module-5-gitops/gitops/travel-control/templates/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: travel-control
  namespace: travel-control
  labels:
    module: m5
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  to:
    kind: Service
    name: control-vm
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
