module-5-gitops/gitops/travel-control/templates/ap-allow-selective-principals-travel-control.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-selective-principals-travel-control
  namespace: travel-control
  labels:
    module: m5
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
